DuplicateCheck method